Modified   SKKey-USBCLUB/SKKey/bin/Release/log/log.txt Modified   SKKey-USBCLUB/SKKey/http/RestClient.cs Modified   SKKey-USBCLUB/SKKey/task/TaskHandle.cs Modified   SKKey-USBCLUB/SKKey/task/TokenTask.cs Modified   SKKey-USBCLUB/WebSocket/WebSocket.cpp Modified   SKKey-USBCLUB/WebSocket/WebSocket.vcxproj Modified   SKKey-USBCLUB/WebSocket/connection_metadata.hpp Modified   SKKey-USBCLUB/WebSocket/stdafx.h

--- a/SKKey-USBCLUB/WebSocket/WebSocket.vcxproj
+++ b/SKKey-USBCLUB/WebSocket/WebSocket.vcxproj
@@ -93,6 +93,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>D:\lib\Install\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
