Modified   SKKey-USBCLUB/SKKey.sln Modified   SKKey-USBCLUB/SKKey/Program.cs Modified   SKKey-USBCLUB/SKKey/SKKey.csproj Modified   SKKey-USBCLUB/SKKey/config/ConfigManager.cs Modified   SKKey-USBCLUB/SKKey/forms/MainForm.Designer.cs Modified   SKKey-USBCLUB/SKKey/forms/MainForm.cs Modified   SKKey-USBCLUB/SKKey/http/FpdkHttpResult.cs Modified   SKKey-USBCLUB/SKKey/task/TokenTask.cs Modified   SKKey-USBCLUB/SKKey/utils/XmlUtil.cs Modified   SKKey-USBCLUB/SKKey/websocket/TaskWebsocketClient.cs Modified   SKKey-USBCLUB/WebSocket/WebSocket.cpp Modified   SKKey-USBCLUB/WebSocket/WebSocket.vcxproj Modified   SKKey-USBCLUB/WebSocket/WebSocket.vcxproj.filters Modified   SKKey-USBCLUB/WebSocket/connection_metadata.hpp Modified   SKKey/SKKey/SKKey.csproj Modified   SKKey/SKKey/bin/Release/SKKey.exe Modified   SKKey/SKKey/config/ConfigManager.cs Modified   SKKey/SKKey/forms/MainForm.Designer.cs Modified   SKKey/SKKey/forms/MainForm.cs Modified   SKKey/SKKey/socket/UsbclubOperator.cs Modified   SKKey/SKKey/task/TokenTask.cs Modified   SKKey/SKKey/websocket/TaskWebsocketClient.cs Add        SKKey-USBCLUB/SKKey/forms/TypeSelect.Designer.cs Add        SKKey-USBCLUB/SKKey/forms/TypeSelect.cs Add        SKKey-USBCLUB/SKKey/forms/TypeSelect.resx

--- a/SKKey-USBCLUB/SKKey/SKKey.csproj
+++ b/SKKey-USBCLUB/SKKey/SKKey.csproj
@@ -92,6 +92,12 @@
     <Compile Include="socket\UsbclubOperator.cs" />
     <Compile Include="task\TaskHandle.cs" />
     <Compile Include="task\TokenTask.cs" />
+    <Compile Include="forms\TypeSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\TypeSelect.Designer.cs">
+      <DependentUpon>TypeSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="utils\DateTimeUtil.cs" />
     <Compile Include="utils\FileUtil.cs" />
     <Compile Include="utils\XmlUtil.cs" />
@@ -110,6 +116,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="forms\TypeSelect.resx">
+      <DependentUpon>TypeSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
